--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
+    
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
