--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,15 +16,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name="com.example.autofriend.MainActivity"
+            android:name="autofriend.AutoFriend"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service
+            android:name="autofriend.AutoFriendService"
+            android:enabled="true" >
+        </service>
     </application>
 
 </manifest>
