--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.autofriend"
+    package="com.autofriend"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,9 +16,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
-            android:name="autofriend.AutoFriend"
+            android:name="com.autofriend.AutoFriend"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +26,7 @@
         </activity>
         
         <service
-            android:name="autofriend.AutoFriendService"
+            android:name="com.autofriend.AutoFriendService"
             android:enabled="true" >
         </service>
     </application>
